[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 133.0

[sub_resource type="CircleShape2D" id=3]
radius = 405.001

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.992157, 0.290196, 0.290196, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="FleeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeArea2D"]
shape = SubResource( 2 )

[node name="ShootArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootArea2D"]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
